--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 # Redirect to index.php for clean URLs
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /Home/index.php [QSA,L]
+RewriteRule ^(.*)$ /mahati/index.php [QSA,L]
 
 # Security headers
 <IfModule mod_headers.c>
